@@ -45,6 +45,7 @@ themes_init (AppearanceData *data)
   GtkWidget *w;
   GList *theme_list, *l;
   GtkListStore *theme_store;
+  GtkTreeModel *sort_model;
 
   /* initialise some stuff */
   gnome_theme_init (NULL);
@@ -82,11 +83,11 @@ themes_init (AppearanceData *data)
   }
 
   w = glade_xml_get_widget (data->xml, "theme_list");
-  GtkTreeModel *sort_model = gtk_tree_model_sort_new_with_model (GTK_TREE_MODEL (theme_store));
+  sort_model = gtk_tree_model_sort_new_with_model (GTK_TREE_MODEL (theme_store));
   gtk_icon_view_set_model (GTK_ICON_VIEW (w), GTK_TREE_MODEL (sort_model));
   gtk_tree_sortable_set_sort_column_id (GTK_TREE_SORTABLE (sort_model), THEME_DISPLAY_NAME_COLUMN, GTK_SORT_ASCENDING);
 
-  w = glade_xml_get_widget (data->xml, "theme_open");
+  w = glade_xml_get_widget (data->xml, "theme_install");
   gtk_button_set_image (GTK_BUTTON (w),
                         gtk_image_new_from_stock ("gtk-open", GTK_ICON_SIZE_BUTTON));
 }
