@@ -1175,7 +1175,6 @@ Vertical gradient</property>
                                     <property name="label" translatable="yes">_Monochrome</property>
                                     <property name="use_underline">True</property>
                                     <property name="draw_indicator">True</property>
-                                    <property name="group">monochrome_radio</property>
                                   </widget>
                                   <packing>
                                     <property name="expand">False</property>
@@ -1282,6 +1281,7 @@ Vertical gradient</property>
                                     <property name="label" translatable="yes">Sub_pixel smoothing (LCDs)</property>
                                     <property name="use_underline">True</property>
                                     <property name="draw_indicator">True</property>
+                                    <property name="group">monochrome_radio</property>
                                   </widget>
                                   <packing>
                                     <property name="expand">False</property>
