@@ -1,5 +1,11 @@
 2007-05-13  Jens Granseuer  <jensgr@gmx.net>
 
+	* appearance-themes.c: (themes_init): update button name, declare
+	variables at beginning of block
+	* appearance.glade: fix button group assignment (again)
+
+2007-05-13  Jens Granseuer  <jensgr@gmx.net>
+
 	* gnome-wp-item.c: (gnome_wp_item_free): don't leak the WPItems
 
 2007-05-13  Thomas Wood  <thos@gnome.org>
